# OpenJar

./: .gitignore  README.md  main.py  pyproject.toml
agents/calendar/: info.json  tools.py
agents/deep_research/: info.yaml
agents/deep_research/arxiv/: info.yaml
agents/email/: info.json  tools.py
agents/file_explorer/: info.yaml  tools.py
agents/research/: info.yaml  tools.py
src/: __init__.py
src/agent/: __init__.py  artifact_manager.py  discovery.py  job_manager.py  loader.py  openjar.py
src/agent/middlewares/: __init__.py  artifact.py  async_subagent.py  base.py  callback.py  complex_task.py  dynamic_prompt.py  load_agents.py  shared.py  skills.py  subagent.py
src/agents/: agent_discovery.py  agent_loader.py  job_manager.py  openjar.py
src/agents/middlewares/: __init__.py  shared.py  subagent.py  teams.py
src/utils/: __init__.py  logging.py
